removed price from signup popup

--- a/pingpong/templates/signup.html
+++ b/pingpong/templates/signup.html
@@ -27,12 +27,12 @@
 				<h3>What is PingPongNinja?</h3>
 				<p>It's an easy way for you to track your ping pong rankings at work or with your friends.</p>
 				
-				<h3>How much does it cost?</h3>
+				<!--<h3>How much does it cost?</h3>
 				<ul>
 					<li>Try for free for 14 days.  No credit card is required.</li>
 					<li>Then pay <strong><span id="thePrice"></span>/mo</strong> (unlimited games and players)</li>
 					<li>Cancel anytime with zero hassle.</li>
-				</ul>
+				</ul>-->
 			</div>
 			<div class="core_clear"></div>
 		</div>
