--- a/pingpong/templates/about.html
+++ b/pingpong/templates/about.html
@@ -9,8 +9,8 @@
   <h1>Our story</h1>
   <img src="{{ MEDIA_URL }}pingpong/images/david-martin.jpg" width="218" height="110" align="right" hspace="5" />
   <img src="{{ MEDIA_URL }}pingpong/images/james-dennes.jpg" width="218" height="110" align="right" hspace="5" />
-  <p>PingPongNinja was developed and designed by <a href="http://jdennes.github.com/">James Dennes</a>, 
-    and Dave Martin out of Sydney Australia, who both work on <a href="http://www.campaignmonitor.com">Campaign Monitor</a>.
+  <p>PingPongNinja was developed and designed by <a href="http://jdenn.es/">James Dennes</a>, 
+    and Dave Martin out of Sydney Australia, who both work on <a href="http://www.campaignmonitor.com/">Campaign Monitor</a>.
   <p>The Campaign Monitor crew take their ping pong seriously and have had an internal ping pong ranking app for some time.</p>
   <p>James and Dave one day thought to themselves, "Hey, a lot of other companies would probably enjoy this!" So they created 
     a new version of their ping pong ranking app for use by anyone - PingPongNinja!</p>
