--- a/pingpong/templates/upgrade.html
+++ b/pingpong/templates/upgrade.html
@@ -7,7 +7,7 @@
 		<div class="popup_body core_radius_bottom6">
 			<div class="popup_container core_radius6">
 				<span class="core_right"><a href="" class="btn_blue core_radius3 iea" onClick="upgrade('pro'); return false;">Upgrade</a></span>
-				<div class="upgrade_price">$8.95/mo</div>
+				<div class="upgrade_price">${{ price }}/mo</div>
 				<ul class="upgrade_list">
 					<li>Add unlimited players</li>
 					<li>List an unlimited number of games</li>
