--- a/pingpong/templates/paypal.html
+++ b/pingpong/templates/paypal.html
@@ -3,39 +3,36 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>One moment...</title>
-	<style>
-		.core_loading { background: #DDD; color: #666; padding-top: 250px; font-size: 34px; text-align: center; font-family: Georgia, "Times New Roman", Times, serif; font-weight: bold; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 2000000; }
-	</style>
-	<script type="text/javascript" src="/generated_media/media/20/combined-en.js"></script>
+  <style type="text/css">
+    .core_loading { background: #DDD; color: #666; padding-top: 250px; font-size: 34px; text-align: center; font-family: Georgia, "Times New Roman", Times, serif; font-weight: bold; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 2000000; }
+  </style>
+  <script type="text/javascript" src="{{ MEDIA_URL }}combined-{{ LANGUAGE_CODE }}.js"></script>
 </head>
-
 <body>
+<div id="core_loading" class="core_loading">One moment...</div>
+<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" id="ppal" style="display: none;">
+  <input type="hidden" name="cmd" value="_xclick-subscriptions">
+  <input type="hidden" name="business" value="{{ business }}">
+  <input type="hidden" name="item_number" value="1" />
+  <input type="hidden" name="item_name" value="PingPongNinja.com - ${{ price }}/mo - cancel anytime" />
+  <input type="hidden" name="no_shipping" value="1" />
+  <input type="hidden" name="rm" value="2" />
+  <input type="hidden" name="return" value="http://www.pingpongninja.com" />
+  <input type="hidden" name="cancel_return" value="http://www.pingpongninja.com" />
+  <input type="hidden" name="a3" value="{{ price }}" />
+  <input type="hidden" name="p3" value="1" />
+  <input type="hidden" name="t3" value="M" />
+  <input type="hidden" name="src" value="1" />
+  <input type="hidden" name="sra" value="1" />
+  <input type="hidden" name="no_note" value="1" />
+  <input type="hidden" name="custom" value="{{ request.user.username }}" />
+  <input type="hidden" name="notify_url" value="http://www.pingpongninja.com/ipn" />
+  <input type="hidden" name="page_style" value="primary" />
+</form>
+<script type="text/javascript">
+  $(document).ready(function () {
+    $("form#ppal").submit();
+  });
+</script>
 </body>
 </html>
-
-
-<div id="core_loading" class="core_loading">One moment...</div>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" id="ppal" style="display: none;">
-	<input type="hidden" name="cmd" value="_xclick-subscriptions">
-	<input type="hidden" name="business" value="designpro@gmail.com">
-	<input type="hidden" name="item_number" value="1" />
-	<input type="hidden" name="item_name" value="PingPongNinja.com - $8.95/mo - cancel anytime" />
-	<input type="hidden" name="no_shipping" value="1" />
-	<input type="hidden" name="rm" value="2" />
-	<input type="hidden" name="return" value="http://www.pingpongninja.com" />
-	<input type="hidden" name="cancel_return" value="http://www.pingpongninja.com" />
-	<input type="hidden" name="a3" value="8.95" />
-	<input type="hidden" name="p3" value="1" />
-	<input type="hidden" name="t3" value="M" />
-	<input type="hidden" name="src" value="1" />
-	<input type="hidden" name="sra" value="1" />
-	<input type="hidden" name="no_note" value="1" />
-	<input type="hidden" name="custom" value="<<ENTERACCOUNTIDHERE>>" />
-	<input type="hidden" name="notify_url" value="http://www.pingpongninja.com/ipn" />
-	<input type="hidden" name="page_style" value="primary" />
-</form>
-<script>
-	$(document).ready(function () {
-		$("form#ppal").submit();
-	});
-</script>
