--- a/pingpong/templates/paypal.html
+++ b/pingpong/templates/paypal.html
@@ -26,7 +26,7 @@
   <input type="hidden" name="sra" value="1" />
   <input type="hidden" name="no_note" value="1" />
   <input type="hidden" name="custom" value="{{ request.user.username }}" />
-  <input type="hidden" name="notify_url" value="http://www.pingpongninja.com/ipn" />
+  <input type="hidden" name="notify_url" value="{{ notify_url }}" />
   <input type="hidden" name="page_style" value="primary" />
 </form>
 <script type="text/javascript">
