--- a/pingpong/templates/paypal.html
+++ b/pingpong/templates/paypal.html
@@ -25,7 +25,7 @@
   <input type="hidden" name="src" value="1" />
   <input type="hidden" name="sra" value="1" />
   <input type="hidden" name="no_note" value="1" />
-  <input type="hidden" name="custom" value="{{ request.user.username }}" />
+  <input type="hidden" name="custom" value="{{ request.user.key }}" />
   <input type="hidden" name="notify_url" value="{{ notify_url }}" />
   <input type="hidden" name="page_style" value="primary" />
 </form>
