--- a/pingpong/templates/paypal.html
+++ b/pingpong/templates/paypal.html
@@ -10,28 +10,10 @@
 </head>
 <body>
 <div id="core_loading" class="core_loading">One moment...</div>
-<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" id="ppal" style="display: none;">
-  <input type="hidden" name="cmd" value="_xclick-subscriptions">
-  <input type="hidden" name="business" value="{{ business }}">
-  <input type="hidden" name="item_number" value="1" />
-  <input type="hidden" name="item_name" value="PingPongNinja.com - ${{ price }}/mo - cancel anytime" />
-  <input type="hidden" name="no_shipping" value="1" />
-  <input type="hidden" name="rm" value="2" />
-  <input type="hidden" name="return" value="http://www.pingpongninja.com" />
-  <input type="hidden" name="cancel_return" value="http://www.pingpongninja.com" />
-  <input type="hidden" name="a3" value="{{ price }}" />
-  <input type="hidden" name="p3" value="1" />
-  <input type="hidden" name="t3" value="M" />
-  <input type="hidden" name="src" value="1" />
-  <input type="hidden" name="sra" value="1" />
-  <input type="hidden" name="no_note" value="1" />
-  <input type="hidden" name="custom" value="{{ request.user.key }}" />
-  <input type="hidden" name="notify_url" value="{{ notify_url }}" />
-  <input type="hidden" name="page_style" value="primary" />
-</form>
+{{ form.sandbox }}
 <script type="text/javascript">
   $(document).ready(function () {
-    $("form#ppal").submit();
+    $("form").submit();
   });
 </script>
 </body>
