Switched from paypal sandbox to live environment.

--- a/pingpong/templates/paypal.html
+++ b/pingpong/templates/paypal.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="core_loading" class="core_loading">One moment...</div>
-{{ form.sandbox }}
+{{ form.render }}
 <script type="text/javascript">
   $(document).ready(function () {
     $("form").submit();
