Design changes to registration templates.

--- a/pingpong/templates/settings.html
+++ b/pingpong/templates/settings.html
@@ -61,7 +61,7 @@
 				<label for="password">Account password</label><br />
 				<span class="core_light">You can reset your main account password by clicking the link below.</span>
 				<br />
-				<a href="" style="color: #006699;">Click here to reset your password</a>
+				<a href="{% url django.contrib.auth.views.password_reset %}" style="color: #006699;">Click here to reset your password</a>
 				<div class="core_clear"></div>
 				<div class="mb"></div>
 				
