--- a/registration/templates/password_reset_complete.html
+++ b/registration/templates/password_reset_complete.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Password reset complete{% endblock %}
+
+{% block body-atts %} id="home"{% endblock %}
 
 {% block content %}
-<h1>Password reset complete</h1>
-<p>You've successfully reset your password!</p>
-{% endblock content %}
+{% include 'top.html' %}
+<div class="container core_privacy">
+  <div class="core_content core_radius6">
+  <h1>Password reset complete</h1>
+  <p>You've successfully reset your password!</p>
+  </div>
+</div>
+{% include 'footer.html' %}
+{% endblock %}
