--- a/registration/templates/password_reset_confirm.html
+++ b/registration/templates/password_reset_confirm.html
@@ -1,10 +1,17 @@
 {% extends "base.html" %}
-{% block title %}Confirm password reset{% endblock %}
+
+{% block body-atts %} id="home"{% endblock %}
 
 {% block content %}
-<h1>Confirm password reset</h1>
-<form action="{{ request.path }}" method="post">
-  <table>{{ form }}</table>
-  <input type="submit" value="Reset" />
-</form>
-{% endblock content %}
+{% include 'top.html' %}
+<div class="container core_privacy">
+  <div class="core_content core_radius6">
+    <h1>Confirm password reset</h1>
+    <form action="{{ request.path }}" method="post">
+      <table>{{ form }}</table>
+      <input type="submit" value="Reset" />
+    </form>
+  </div>
+</div>
+{% include 'footer.html' %}
+{% endblock %}
