--- a/registration/templates/password_reset_done.html
+++ b/registration/templates/password_reset_done.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Reset password{% endblock %}
+
+{% block body-atts %} id="home"{% endblock %}
 
 {% block content %}
-<h1>Reset password</h1>
-<p>You've received an email with instructions for resetting your password. Please check your inbox.</p>
-{% endblock content %}
+{% include 'top.html' %}
+<div class="container core_privacy">
+  <div class="core_content core_radius6">
+    <h1>Reset password</h1>
+    <p>You've received an email with instructions for resetting your password. Please check your inbox.</p>
+  </div>
+</div>
+{% include 'footer.html' %}
+{% endblock %}
