A few tweaks to the registration process.

--- a/registration/templates/activate.html
+++ b/registration/templates/activate.html
@@ -8,7 +8,7 @@
   <div class="core_content core_radius6">
     {% if account %}
       <h1>Activation successful</h1>
-      <p>Congratulations, {{ account.username }}. Your account has been created successfully.</p>
+      <p>Congratulations, {{ account.username }}. Your account has been activated. You can now login using the form above.</p>
     {% else %}
       <h1>Activation failed :(</h1>
       <p>Sorry, there were problems with the activation. Please make sure that the activation link was opened correctly in your Browser. Please be also aware that activation links expire automatically.</p>
