--- a/registration/templates/registration_complete.html
+++ b/registration/templates/registration_complete.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block body-atts %} id="home"{% endblock %}
 
@@ -6,8 +6,8 @@
 {% include 'top.html' %}
 <div class="container core_privacy">
   <div class="core_content core_radius6">
-    <h1>Activation required</h1>
-    <p>In order to activate your account please check your email and click on the activation link.</p>
+  	<h1>Registration Successful</h1>
+  	<p>Thanks for registering with PingPongNinja. All you need to do now is check your email and activate your account!</p>
   </div>
 </div>
 {% include 'footer.html' %}
