--- a/pingpong/templates/register.html
+++ b/pingpong/templates/register.html
@@ -8,7 +8,7 @@
   <div class="core_content core_radius6">
   	<h1>Register</h1>
   	<div class="mb_extra"></div>
-  	<p>Fill out the short signup form below and start adding scores immediately. Your <strong>free trial will last for 14 days</strong>.</p> 
+  	<p>Register by filling in the form below and start adding scores immediately. Your <strong>free trial will last for 14 days</strong>.</p> 
   	<div class="mb_extra"></div>
   	<form id="signups" action="{% url registration.views.register %}" method="post">
   	  {{ form.non_field_errors }}
