--- a/pingpong/templates/base.html
+++ b/pingpong/templates/base.html
@@ -2,21 +2,8 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>{% block title %}{% endblock %}PingPongNinja - In-office ping pong and table tennis tournament software</title>
-  <!-- Google Website Optimizer Control Script -->
-	<script>
-	function utmx_section(){}function utmx(){}
-	(function(){var k='0555084086',d=document,l=d.location,c=d.cookie;function f(n){
-	if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.indexOf(';',i);return c.substring(i+n.
-	length+1,j<0?c.length:j)}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;
-	d.write('<sc'+'ript src="'+
-	'http'+(l.protocol=='https:'?'s://ssl':'://www')+'.google-analytics.com'
-	+'/siteopt.js?v=1&utmxkey='+k+'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='
-	+new Date().valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-	'" type="text/javascript" charset="utf-8"></sc'+'ript>')})();
-	</script>
-	<!-- End of Google Website Optimizer Control Script -->
-	<meta name="viewport" content="width=320, user-scalable=no">
+  <title>{% block title %}{% endblock %}PingPongNinja - In-office ping pong and table tennis rankings software</title>
+  <meta name="viewport" content="width=320, user-scalable=no">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
   {% block css %}
@@ -46,16 +33,5 @@ pageTracker._setDomainName(".pingpongninja.com");
 pageTracker._trackPageview();
 } catch(err) {}
 </script>
-<!-- Google Website Optimizer Tracking Script -->
-<script type="text/javascript">
-if(typeof(_gat)!='object')document.write('<sc'+'ript src="http'+
-(document.location.protocol=='https:'?'s://ssl':'://www')+
-'.google-analytics.com/ga.js"></sc'+'ript>')</script>
-<script type="text/javascript">
-try {
-var gwoTracker=_gat._getTracker("UA-16365298-2");
-gwoTracker._trackPageview("/0555084086/test");
-}catch(err){}</script>
-<!-- End of Google Website Optimizer Tracking Script -->
 </body>
 </html>
