--- a/pingpong/templates/thanks.html
+++ b/pingpong/templates/thanks.html
@@ -4,11 +4,13 @@
 
 {% block content %}
 {% include 'top.html' %}
-<div class="container core_privacy">
-    <div class="core_content core_radius6">
-			<h1>Thanks!</h1>
-			<p>If you submitted feedback, we'd really like to thank you. If you asked a question we'll get back to you as soon as possible.</p>
-    </div>
+<div class="headline">
+	<div class="container core_privacy">
+			<div class="core_content core_radius6">
+				<h1>Thanks!</h1>
+				<p>If you submitted feedback, we'd really like to thank you. If you asked a question we'll get back to you as soon as possible.</p>
+			</div>
+	</div>
 </div>
 {% include 'footer.html' %}
 {% endblock %}
