--- a/pingpong/templates/500.html
+++ b/pingpong/templates/500.html
@@ -14,13 +14,25 @@
 </head>
 <body id="home">
   <div class="top">
-  	<div class="logo">
-  		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" />
-  	</div>
-  </div>
-  <div class="container">
-	<h1 style="margin-bottom: 23px;">Oops - We've run into a bit of a snag.</h1>
-	<p style="margin-bottom: 23px;">Check out this video and then give it another try.  If there is still a problem, please let us know (<a href="mailto:support@pingpongninja.com">support@pingpongninja.com)</a></p>
-	<object width="640" height="385"><param name="movie" value="http://www.youtube.com/v/-9q74AmaTPg&color1=0xb1b1b1&color2=0xd0d0d0&hl=en_US&feature=player_detailpage&fs=1"></param><param name="allowFullScreen" value="true"></param><param name="allowScriptAccess" value="always"></param><embed src="http://www.youtube.com/v/-9q74AmaTPg&color1=0xb1b1b1&color2=0xd0d0d0&hl=en_US&feature=player_detailpage&fs=1" type="application/x-shockwave-flash" allowfullscreen="true" allowScriptAccess="always" width="640" height="385"></embed></object>
-  </div></body>
+		<div class="container logo">
+			<a href="{% url pingpong.views.index %}"><img src="{{ MEDIA_URL }}pingpong/images/home_logo.png" width="282" height="48" alt="PingPongNinja - In-Office Ping Pong Rankings" style="margin-top: 23px;" /></a>
+		</div>
+	</div>
+	<div class="headline">
+		<div class="container">
+			<h1 style="margin-bottom: 23px; font-size: 23px; font-family: Georgia !important;">Oops - We've run into a bit of a snag.</h1>
+			<p style="margin-bottom: 23px; font-size: 14px;">Check out this video and then give it another try.  If there is still a problem, please let us know (<a href="mailto:support@pingpongninja.com">support@pingpongninja.com)</a></p>
+			<object width="640" height="480"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=2747427&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1&amp;group_id=" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=2747427&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1&amp;group_id=" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="640" height="480"></embed></object>
+		</div>
+	</div>
+	<div class="container foot">
+		<div class="links terms_of_use">
+			<a href="{% url pingpong.views.about %}">Our story</a>
+			<a href="{% url pingpong.views.contact %}">Contact us</a>
+			<a href="{% url pingpong.views.terms %}">Terms of use</a>
+			<a href="{% url pingpong.views.privacy %}">Privacy policy</a>
+			<a href="http://twitter.com/ppninja">Follow us on Twitter</a>
+		</div>
+	</div>
+</body>
 </html>
