--- a/pingpong/templates/contact.html
+++ b/pingpong/templates/contact.html
@@ -4,28 +4,33 @@
 
 {% block content %}
 {% include 'top.html' %}
-<div class="container core_privacy">
-  <div class="core_content core_radius6">
-    <form id="contactForm" action="{% url pingpong.views.contact %}" method="post"> 
-  		<h1>We'd love to hear from you</h1>
-  		<p>
-  			<label for="feedback">Submit your feedback below:</label>
-  			{{ form.feedback }}
-  			{{ form.feedback.errors }}
-  		</p>
-  		<p>
-  			<label>What's your name?</label>
-  			{{ form.name }}
-  			{{ form.name.errors }}
-  		</p>
-  		<p>
-  			<label>What's your email address?</label>
-  			{{ form.email }}
-  			{{ form.email.errors }}
-  		</p>
-  		<p><input type="submit" onclick="$('#contactForm').submit(); return false;" class="btn_blue core_radius3" value="Submit feedback" /></p>
-  	</form>
-  </div>
+<div class="headline">
+	<div class="container core_privacy">
+		<div class="core_content core_radius6">
+			<form id="contactForm" action="{% url pingpong.views.contact %}" method="post"> 
+				<h1>We'd love to hear from you</h1>
+				<p>
+					<label for="feedback">Submit your feedback below:</label>
+					<br />
+					{{ form.feedback }}
+					{{ form.feedback.errors }}
+				</p>
+				<p>
+					<label>What's your name?</label>
+					<br />
+					{{ form.name }}
+					{{ form.name.errors }}
+				</p>
+				<p>
+					<label>What's your email address?</label>
+					<br />
+					{{ form.email }}
+					{{ form.email.errors }}
+				</p>
+				<p><input type="submit" onclick="$('#contactForm').submit(); return false;" class="btn_blue core_radius3" value="Submit feedback" /></p>
+			</form>
+		</div>
+	</div>
 </div>
 <script type="text/javascript">	
 	$(document).ready(function() {
