--- a/pingpong/templates/footer.html
+++ b/pingpong/templates/footer.html
@@ -1,16 +1,12 @@
-<div class="container" style="padding-top: 0;">
-	<div class="links terms_of_use">
-		<a href="{% url pingpong.views.about %}">Our story</a>
-		<a href="{% url pingpong.views.contact %}">Contact us</a>
-		<a href="{% url pingpong.views.terms %}">Terms of use</a>
-		<a href="{% url pingpong.views.privacy %}">Privacy policy</a>
+	<div class="container foot">
+		<div class="links terms_of_use">
+			<a href="{% url pingpong.views.about %}">Our story</a>
+			<a href="{% url pingpong.views.contact %}">Contact us</a>
+			<a href="{% url pingpong.views.terms %}">Terms of use</a>
+			<a href="{% url pingpong.views.privacy %}">Privacy policy</a>
+			<a href="http://twitter.com/ppninja">Follow us on Twitter</a>
+		</div>
 	</div>
-	<div class="core_tryit core_right">
-		<a href="{% url registration.views.register %}"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
-	</div>
-	<div class="core_clear"></div>
-	<span class="cancel core_right">Then <script>utmx_section("base")</script><span id="price">$8.95</span></noscript>/ mo. Cancel anytime - no hassle.</span>
-</div>
 <script type="text/javascript">
     loginFormValue();
     $("#loginUsername").focus();
