--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -4,24 +4,43 @@
 
 {% block content %}
 {% include 'top.html' %}
-<div class="container">
-	<a href="{% url registration.views.register %}" class="core_right core_screenshot"><img src="{{ MEDIA_URL }}pingpong/images/home_screenshot.jpg" width="459" height="438" /></a>
-	<div class="copy">
-		<div class="intro">Track all of your singles and doubles scores and know for sure who's the best in the office.</div>
-		<div class="feature unlimited">
+	<div class="headline" style="height: 283px;">
+		<div class="container main">
+			<div class="main_signup">
+				<a href="{% url registration.views.register %}"><img src="{{ MEDIA_URL }}pingpong/images/home_signup.png" height="55" width="249" /></a>
+				Then $8.95/ mo. Cancel anytime - no hassle. 
+			</div>
+		</div>
+	</div>
+	<div class="container features">
+		<div class="unlimited mr15">
 			<h2>Unlimited players &amp; games</h2>
-			<p>You can add unlimited players and list unlimited games for just <script>utmx_section("base")</script><span id="price">$8.95</span></noscript>/mo.  Cancel anytime and take your data with you.</p>
+			<p>You can add unlimited players and list unlimited games for just <span id="price">$8.95</span>/mo.  Cancel anytime and take your data with you.</p>
 		</div>
-		<div class="feature trial">
+		<div class="free mr20">
 			<h2>14 day free trial</h2>
-			<p>Get everything set up in only a minute or two.  Try it free for 14 days.  No credit card is required until after your free trial.</p>
+			<p>Get everything set up in only a minute or two.  <a href="{% url registration.views.register %}">Try it free for 14 days</a>.  No credit card is required until after your free trial.</p>
 		</div>
-		<div class="feature hosted">
+		<div class="remote">
 			<h2>Remotely hosted</h2>
 			<p>We backup your data nightly and make sure it stays secure.  Plus, now your devs have no way to fudge their own scores.</p>
 		</div>
+		<div class="core_clear"></div>
 	</div>
-	<div class="core_clear"></div>
-</div>
+	<div class="container screens">
+		<div class="adding">
+			<h3>Adding games couldn't be easier</h3>
+			<p>Just select who played, and use the slider to enter your scores.  Once you've entered your scores, your new rankings will be automatically calculated for you. </p>
+			<img src="{{ MEDIA_URL }}pingpong/images/home_screen_adding.gif" height="351" width="543" />
+		</div>
+		<div class="tv">
+			<img src="{{ MEDIA_URL }}pingpong/images/home_screen_tv.jpg" height="252" width="390" style="margin-bottom: 23px;" />
+			<h3>Beautiful on a touch screen TV</h3>
+			<p>PingPongNinja was designed from the ground up to be used in the office.  There's nothing cooler than using a flat-panel TV to enter your scores after each game?</p>
+			<span class="core_right"><a href="{% url registration.views.register %}"><img src="{{ MEDIA_URL }}pingpong/images/home_signup.png" height="55" width="249" /></a></span>
+		</div>
+		<div class="core_clear"></div>
+	</div>
+	<div class="container" style="border-top: 1px solid #21292E;"></div>
 {% include 'footer.html' %}
 {% endblock %}
