--- a/pingpong/templates/privacy.html
+++ b/pingpong/templates/privacy.html
@@ -4,36 +4,38 @@
 
 {% block content %}
 {% include 'top.html' %}
-<div class="container core_privacy">
-     <div class="core_content core_radius6">
-          <h1>Privacy Policy</h1>
-          <p><strong>If you have questions or concerns</strong> regarding this statement, you should first contact us at: <a href="mailto:support@pingpongninja.com">support@pingpongninja.com</a>.<br />
-               In an attempt to ensure your confidentiality and privacy, we have developed controls to keep your information from outside parties. This privacy policy covers all information collected on <a href="http://www.pingpongninja.com">www.pingpongninja.com</a>.</p>
-          <p><strong>Information Sharing and Disclosure</strong> <br>
-               We DO NOT Share or Disclose Personally Identifiable Information with Third Parties.</p>
-          <p><strong>Testimonials</strong><br>
-               Testimonials are posted on our site. We obtain permission from the individual or company prior to posting their testimonial. If you would like a testimonial removed at any time please contact us at: <a href="mailto:support@pingpongninja.com">support@pingpongninja.com</a></p>
-          <p><strong>Cookies</strong><br>
-               This privacy statement covers the use of cookies by PingPongNinja, Inc on <a href="http://www.pingpongninja.com">pingpongninja.com</a> only. A cookie is a small text file that is stored on a user's computer for record-keeping purposes. We use cookies on this site. We do link the information we store in cookies to personally identifiable information you submit while on our site. <br>
-               We use persistent cookies. A persistent cookie remains on your hard drive for an extended period of time. You can remove persistent cookies by following directions provided in your Internet browser's "help" file. More information on cookies can be found here: <a href="http://en.wikipedia.org/wiki/HTTP_cookie">http://en.wikipedia.org/wiki/HTTP_cookie</a>. We set a persistent cookie to track which search engine you came from, which keyword you typed in, what page you first landed on - on our site, and which form you submitted. If you reject cookies, you may still use our site.</p>
-          <p><strong>Partners </strong><br>
-               PingPongNinja, Inc. does not share your information with any partner companies, unless given your deliberate permission in writing. We will not sell your information to any newsletter or mailing list companies to access your information including name, address, email, telephone, company name, title, position or otherwise.</p>
-          <p><strong>Children </strong><br>
-               PingPongNinja, Inc. is a family-friendly company and does not publish information that is not suitable for children or minors. Examples of pornography, offensive language, graphic pictures, or violence are not tolerated on PingPongNinja, Inc.</p>
-          <p><strong>Your Account Access </strong><br>
-               Usernames and passwords are stored in our databases for use in our reporting system. This information is kept securely and solely on our private servers and is only used to assist you in accessing your account as a client, and facilitating communication. User information is stored only when the user voluntarily gives this information for use by a client company. No information is released outside of the PingPongNinja, Inc. system.</p>
-          <p><strong>Access to Personally Identifiable Information</strong><br>
-               If your personally identifiable information changes, or if you no longer desire our service, you may [correct, update, delete or deactivate it] by emailing our Customer Support at <a href="mailto:support@pingpongninja.com">support@pingpongninja.com</a>.</p>
-          <p><strong>Security</strong><br>
-               The security of your personal information is important to us. We follow generally accepted industry standards to protect the personal information submitted to us, both during transmission and once we receive it. No method of transmission over the Internet, or method of electronic storage, is 100% secure, however. Therefore, while we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security. If you have any questions about security on our Web site, you can send email us at <a href="mailto:support@pingpongninja.com">support@pingpongninja.com</a>.</p>
-          <p><strong>Legal Disclaimer</strong><br>
-               We reserve the right to disclose your personally identifiable information as required by law and when we believe that disclosure is necessary to protect our rights and/or comply with a judicial proceeding, court order, or legal process served on our Web site.</p>
-          <p><strong>Terms </strong><br>
-               No party other than PingPongNinja, Inc. is allowed to access information stored on our servers. Doing so is a violation of federal and state law. PingPongNinja, Inc. has taken caution by placing security measures and firewalls on all network servers in an attempt to prevent outside parties from accessing private information. In the event of a breach of security or attempted breach of security, PingPongNinja, Inc. will press charges to the fullest extent to those parties illegally accessing information on our servers, both civilly and criminally.</p>
-          <p><strong>Changes in this Privacy Statement</strong><br>
-               If we decide to change our privacy policy, we will post those changes to this privacy statement, the home page, and other places we deem appropriate so that you are aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it. </p>
-          <p>We reserve the right to modify this privacy statement at any time, so please review it frequently. If we make material changes to this policy, we will notify you here, by email, or by means of a notice on our home page. </p>
-     </div>
+<div class="headline">
+	<div class="container core_privacy">
+			 <div class="core_content core_radius6">
+						<h1>Privacy Policy</h1>
+						<p><strong>If you have questions or concerns</strong> regarding this statement, you should first contact us at: <a href="mailto:support@pingpongninja.com">support@pingpongninja.com</a>.<br />
+								 In an attempt to ensure your confidentiality and privacy, we have developed controls to keep your information from outside parties. This privacy policy covers all information collected on <a href="http://www.pingpongninja.com">www.pingpongninja.com</a>.</p>
+						<p><strong>Information Sharing and Disclosure</strong> <br>
+								 We DO NOT Share or Disclose Personally Identifiable Information with Third Parties.</p>
+						<p><strong>Testimonials</strong><br>
+								 Testimonials are posted on our site. We obtain permission from the individual or company prior to posting their testimonial. If you would like a testimonial removed at any time please contact us at: <a href="mailto:support@pingpongninja.com">support@pingpongninja.com</a></p>
+						<p><strong>Cookies</strong><br>
+								 This privacy statement covers the use of cookies by PingPongNinja, Inc on <a href="http://www.pingpongninja.com">pingpongninja.com</a> only. A cookie is a small text file that is stored on a user's computer for record-keeping purposes. We use cookies on this site. We do link the information we store in cookies to personally identifiable information you submit while on our site. <br>
+								 We use persistent cookies. A persistent cookie remains on your hard drive for an extended period of time. You can remove persistent cookies by following directions provided in your Internet browser's "help" file. More information on cookies can be found here: <a href="http://en.wikipedia.org/wiki/HTTP_cookie">http://en.wikipedia.org/wiki/HTTP_cookie</a>. We set a persistent cookie to track which search engine you came from, which keyword you typed in, what page you first landed on - on our site, and which form you submitted. If you reject cookies, you may still use our site.</p>
+						<p><strong>Partners </strong><br>
+								 PingPongNinja, Inc. does not share your information with any partner companies, unless given your deliberate permission in writing. We will not sell your information to any newsletter or mailing list companies to access your information including name, address, email, telephone, company name, title, position or otherwise.</p>
+						<p><strong>Children </strong><br>
+								 PingPongNinja, Inc. is a family-friendly company and does not publish information that is not suitable for children or minors. Examples of pornography, offensive language, graphic pictures, or violence are not tolerated on PingPongNinja, Inc.</p>
+						<p><strong>Your Account Access </strong><br>
+								 Usernames and passwords are stored in our databases for use in our reporting system. This information is kept securely and solely on our private servers and is only used to assist you in accessing your account as a client, and facilitating communication. User information is stored only when the user voluntarily gives this information for use by a client company. No information is released outside of the PingPongNinja, Inc. system.</p>
+						<p><strong>Access to Personally Identifiable Information</strong><br>
+								 If your personally identifiable information changes, or if you no longer desire our service, you may [correct, update, delete or deactivate it] by emailing our Customer Support at <a href="mailto:support@pingpongninja.com">support@pingpongninja.com</a>.</p>
+						<p><strong>Security</strong><br>
+								 The security of your personal information is important to us. We follow generally accepted industry standards to protect the personal information submitted to us, both during transmission and once we receive it. No method of transmission over the Internet, or method of electronic storage, is 100% secure, however. Therefore, while we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security. If you have any questions about security on our Web site, you can send email us at <a href="mailto:support@pingpongninja.com">support@pingpongninja.com</a>.</p>
+						<p><strong>Legal Disclaimer</strong><br>
+								 We reserve the right to disclose your personally identifiable information as required by law and when we believe that disclosure is necessary to protect our rights and/or comply with a judicial proceeding, court order, or legal process served on our Web site.</p>
+						<p><strong>Terms </strong><br>
+								 No party other than PingPongNinja, Inc. is allowed to access information stored on our servers. Doing so is a violation of federal and state law. PingPongNinja, Inc. has taken caution by placing security measures and firewalls on all network servers in an attempt to prevent outside parties from accessing private information. In the event of a breach of security or attempted breach of security, PingPongNinja, Inc. will press charges to the fullest extent to those parties illegally accessing information on our servers, both civilly and criminally.</p>
+						<p><strong>Changes in this Privacy Statement</strong><br>
+								 If we decide to change our privacy policy, we will post those changes to this privacy statement, the home page, and other places we deem appropriate so that you are aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it. </p>
+						<p>We reserve the right to modify this privacy statement at any time, so please review it frequently. If we make material changes to this policy, we will notify you here, by email, or by means of a notice on our home page. </p>
+			 </div>
+	</div>
 </div>
 {% include 'footer.html' %}
 {% endblock %}
