--- a/pingpong/templates/register.html
+++ b/pingpong/templates/register.html
@@ -4,51 +4,57 @@
 
 {% block content %}
 {% include 'top.html' %}
-<div class="container core_privacy">
-  <div class="core_content core_radius6">
-  	<h1>Register</h1>
-  	<div class="mb_extra"></div>
-  	<p>Register by filling in the form below and start adding scores immediately. Your <strong>free trial will last for 14 days</strong>.</p> 
-  	<div class="mb_extra"></div>
-  	<form id="signups" action="{% url registration.views.register %}" method="post">
-  	  {{ form.non_field_errors }}
-  		<label>Choose a username</label>
-  		{{ form.username }}
-  		{{ form.username.errors }}
-  		<div class="core_clear"></div>
-  		<div class="mb"></div>
-
-  		<label>Enter a password</label>
-  		{{ form.password1 }}
-  		{{ form.password1.errors }}
-  		<div class="core_clear"></div>
-  		<div class="mb"></div>
-
-  		<label>Retype your password</label>
-  		{{ form.password2 }}
-  		{{ form.password2.errors }}
-  		<div class="core_clear"></div>
-  		<div class="mb"></div>
-
-  		<label>Enter your email address</label>
-  		{{ form.email }}
-  		{{ form.email.errors }}
-  		<div class="core_clear"></div>
-  		<div class="mb"></div>
-      <!--
-  		<label for="email">Add your players</label>
-  		<p class="core_text_med mb8 core_light">Add each of your players, one name per line.</p>
-  		<div class="signup_players_box">
-  			<div id="signup_players_example" class="signup_players_example">David M<br />James D</div>
-  			<textarea name="players" id="players" class="signup_players fields required"></textarea>
-  		</div>
-  		<div id="players_error" class="core_mb_extra core_error"></div>
-  		<div class="core_clear"></div>
-  		<div class="mb"></div>
-      -->
-  		<input type="image" value="submit" src="{{ MEDIA_URL }}pingpong/images/btn_create_my_account.jpg" width="218" height="45" />
-  	</form>
-  </div>
+<div class="headline">
+	<div class="container core_privacy">
+		<div class="core_content core_radius6">
+			<h1>Register</h1>
+			<div class="mb_extra"></div>
+			<p>Register by filling in the form below and start adding scores immediately. Your <strong>free trial will last for 14 days</strong>.</p> 
+			<div class="mb_extra"></div>
+			<form id="signups" action="{% url registration.views.register %}" method="post">
+				{{ form.non_field_errors }}
+				<label>Choose a username</label>
+				<br />
+				{{ form.username }}
+				{{ form.username.errors }}
+				<div class="core_clear"></div>
+				<div class="mb"></div>
+	
+				<label>Enter a password</label>
+				<br />
+				{{ form.password1 }}
+				{{ form.password1.errors }}
+				<div class="core_clear"></div>
+				<div class="mb"></div>
+	
+				<label>Retype your password</label>
+				<br />
+				{{ form.password2 }}
+				{{ form.password2.errors }}
+				<div class="core_clear"></div>
+				<div class="mb"></div>
+	
+				<label>Enter your email address</label>
+				<br />
+				{{ form.email }}
+				{{ form.email.errors }}
+				<div class="core_clear"></div>
+				<div class="mb"></div>
+				<!--
+				<label for="email">Add your players</label>
+				<p class="core_text_med mb8 core_light">Add each of your players, one name per line.</p>
+				<div class="signup_players_box">
+					<div id="signup_players_example" class="signup_players_example">David M<br />James D</div>
+					<textarea name="players" id="players" class="signup_players fields required"></textarea>
+				</div>
+				<div id="players_error" class="core_mb_extra core_error"></div>
+				<div class="core_clear"></div>
+				<div class="mb"></div>
+				-->
+				<input type="image" value="submit" src="{{ MEDIA_URL }}pingpong/images/btn_create_my_account.jpg" width="218" height="45" />
+			</form>
+		</div>
+	</div>
 </div>
 {% include 'footer.html' %}
 <script>	
