--- a/pingpong/templates/top.html
+++ b/pingpong/templates/top.html
@@ -1,22 +1,62 @@
-<div class="top">
-  <div class="logo">
-    <span class="core_right login_box">
-    {% if not request.user.is_authenticated %}
-    <div class="login">
-      <div class="signup"><a href="{% url registration.views.register %}">Register</a></div>
-      <form action="{% url pingpong.views.login %}" method="post">
-        <input type="image" src="{{ MEDIA_URL }}pingpong/images/btn_home_login.jpg" height="28" width="55" tabindex="3" class="core_right" />
-        <input type="password" id="loginPassword" onfocus="loginClear();" onblur="loginFormValue();" name="password" tabindex="2" class="small core_right"  />
-        <input type="text" id="loginUsername" onfocus="loginClear('username');" onblur="loginFormValue();" name="username" tabindex="1" class="small core_right" {% if previous_username %}value="{{ previous_username }}"{% endif %} />
-      </form>
-      {% if login_error %}
-      <div id="login_error">{{ login_error }}</div>
-      {% endif %}
-    </div>
-    {% else %}
-    <div class="logged_in"> Welcome {{ user.username }}! &nbsp;&nbsp;<a href="{% url pingpong.views.index %}">My dashboard</a> | <a href="{% url django.contrib.auth.views.logout %}">Logout</a> </div>
-    {% endif %}
-    <div class="core_clear"></div>
-    </span> <a href="{% url pingpong.views.index %}"><img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" /></a>
-  </div>
-</div>
+<script>
+		$(document).ready(function () {
+			// Login events
+			if ($("#uname").val().length > 0) {
+				$(".username_placeholder").hide();
+			}
+			$("#login_button").live("mouseover", function () {
+				$("#login_button").attr("src", "{{ MEDIA_URL }}pingpong/images/home_login_on.jpg");
+			});
+			$("#login_button").live("mouseout", function () {
+				$("#login_button").attr("src", "{{ MEDIA_URL }}pingpong/images/home_login_off.jpg");
+			});
+			$(".username_placeholder").click(function () {
+				$(".username_placeholder").hide();
+				$("#uname").focus();
+			});
+			$("#uname").keyup(function () {
+				if ($("#uname").val().length === 0) {
+					$(".username_placeholder").show();
+				} else {
+					$(".username_placeholder").hide();
+				}
+			});
+			$("#uname").focus(function () {
+				$(".username_placeholder").hide();
+			});
+			$("#passw").focus(function () {
+				if ($("#passw").val() === "Password") {
+					$("#passw").val("");
+				}
+			});
+			$("#passw").blur(function () {
+				if ($("#passw").val() === "") {
+					$("#passw").val("Password");
+				}
+			});
+		});
+	</script>
+	<div class="top">
+		<div class="container logo">
+			{% if not request.user.is_authenticated %}
+			<div class="login">
+				<form action="{% url pingpong.views.login %}" method="post">
+					<div class="errors">
+						{% if login_error %}
+							{{ login_error }}
+						{% else %}
+							&nbsp;
+						{% endif %}
+					</div>
+					<span class="username_placeholder">Username</span>
+					<input id="login_button" type="image" tabindex="3" src="{{ MEDIA_URL }}pingpong/images/home_login_off.jpg" />
+					<input id="passw" class="login_fields" name="password" tabindex="2" type="password" value="Password" />
+					<input id="uname" class="login_fields" name="username" tabindex="1" type="text" {% if previous_username %}value="{{ previous_username }}"{% endif %} />
+				</form>
+			</div>
+			{% else %}
+    	<div class="logged_in"> Welcome {{ user.username }}! &nbsp;&nbsp;<a href="{% url pingpong.views.index %}">My dashboard</a> | <a href="{% url django.contrib.auth.views.logout %}">Logout</a> </div>
+    	{% endif %}
+			<a href="{% url pingpong.views.index %}"><img src="{{ MEDIA_URL }}pingpong/images/home_logo.png" width="282" height="48" alt="PingPongNinja - In-Office Ping Pong Rankings" style="margin-top: 23px;" /></a>
+		</div>
+	</div>
