--- a/pingpong/templates/footer.html
+++ b/pingpong/templates/footer.html
@@ -8,6 +8,7 @@
 		</div>
 	</div>
 <script type="text/javascript">
-    loginFormValue();
-    $("#loginUsername").focus();
+    $(document).ready(function () {
+			$("#loginUsername").focus();
+		});
 </script>
